tests/testing_data/anonymized_testing_data/invalid_data/mult_series_uid/1.3.12.2.1107.5.1.4.3024295249861856527476734919304407350-11-21-1svccb.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:ab4f06c7a87c41e04287c6f3ec8ec835412c14b5236eb9e367171730775da707
size 314422
